Added option for inserting linked grub2 menuentries
    Added option for inserting linked grub2 menuentries

    1. If GRUB_OS_PROBER_LINKED=true, instead of embedding os-probed menu entries, a link to the target grub.cfg is created.
    2. Exception: If currently booted system uses separate /boot, and the probed system also uses the same separate /boot, then GRUB_OS_PROBER_LINKED value for this system is ignored, and standard menuentry is created. (Otherwise the resulting menuentry will not boot the target OS, but reload the current grub.cfg.)
    3. If the probed system uses separate /boot (different from the currently used /boot), the entry name is formatted like that: "sda2: ROSA Desktop (sda5), Fedora (sda6)...", where "sda2" is the target /boot, sda5/sda6/etc. are respective root partitions, and distro names are the shortened versions of the original target OS names (one or two first words).

[eshatokhin@virtuozzo.com: rediffed for GRUB 2.02]

--- a/util/grub-mkconfig.in
+++ b/util/grub-mkconfig.in
@@ -233,6 +233,7 @@ export GRUB_DEFAULT \
   GRUB_THEME \
   GRUB_GFXPAYLOAD_LINUX \
   GRUB_DISABLE_OS_PROBER \
+  GRUB_OS_PROBER_LINKED \
   GRUB_INIT_TUNE \
   GRUB_SAVEDEFAULT \
   GRUB_ENABLE_CRYPTODISK \
