Adapt grub-set-password for ROSA
Patch 0060-Add-friendly-grub2-password-config-tool-985962.patch from Fedora adds grub-set-password
In ROSA $prefix in Grub is /boot/grub2 always, even on EFI

--- a/util/grub-set-password.in
+++ b/util/grub-set-password.in
@@ -1,11 +1,6 @@
 #!/bin/sh -e
 
-EFIDIR=$(grep ^ID= /etc/os-release | sed -e 's/^ID=//' -e 's/rhel/redhat/')
-if [ -d /sys/firmware/efi/efivars/ ]; then
-    grubdir=`echo "/@bootdirname@/efi/EFI/${EFIDIR}/" | sed 's,//*,/,g'`
-else
-    grubdir=`echo "/@bootdirname@/@grubdirname@" | sed 's,//*,/,g'`
-fi
+grubdir=`echo "/@bootdirname@/@grubdirname@" | sed 's,//*,/,g'`
 
 PACKAGE_VERSION="@PACKAGE_VERSION@"
 PACKAGE_NAME="@PACKAGE_NAME@"
@@ -26,7 +21,7 @@ located by default at ${grubdir}.
   -v, --version                  print the version information and exit
   -o, --output_path <DIRECTORY>  put user.cfg in a user-selected directory
 
-Report bugs at https://bugzilla.redhat.com.
+Report bugs at https://bugzilla.rosalinux.ru
 EOF
 }
 
