Add option to password-protect only editing of entries
It may be required to password-protect editing kernel cmdline
but keep the OS able to boot without a password.

Adding a variable GRUB_PASSWORD_PROTECT_ONLY_EDITING which can be
set in /etc/default/grub as "GRUB_PASSWORD_PROTECT_ONLY_EDITING=true"
to make Grub not ask password for just booting entries without editing them.

This patch adds ${unrestricted} to all "menuentry" and "submenu".

Credits go to http://daniel-lange.com/archives/75-Securing-the-grub-boot-loader.html

--- a/util/grub-mkconfig.in
+++ b/util/grub-mkconfig.in
@@ -239,7 +239,14 @@ export GRUB_DEFAULT \
   GRUB_ENABLE_CRYPTODISK \
   GRUB_BADRAM \
   GRUB_OS_PROBER_SKIP_LIST \
-  GRUB_DISABLE_SUBMENU
+  GRUB_DISABLE_SUBMENU \
+  GRUB_PASSWORD_PROTECT_ONLY_EDITING
+
+if [ "x${GRUB_PASSWORD_PROTECT_ONLY_EDITING}" = "xtrue" ]
+  then unrestricted="--unrestricted "
+  else unrestricted=" "
+fi
+export unrestricted
 
 if test "x${grub_cfg}" != "x"; then
   rm -f "${grub_cfg}.new"
