--- a/util/grub-mkconfig.in
+++ b/util/grub-mkconfig.in
@@ -278,6 +278,10 @@ for i in "${grub_mkconfig_dir}"/* ; do
   esac
 done
 
+if [ "x${grub_cfg}" != "x" ] && ! grep -qi "password" ${grub_cfg}.new ; then
+  chmod 444 ${grub_cfg}.new || :
+fi
+
 if test "x${grub_cfg}" != "x" ; then
   if ! ${grub_script_check} ${grub_cfg}.new; then
     # TRANSLATORS: %s is replaced by filename
