--- a/util/grub.d/10_linux.in
+++ b/util/grub.d/10_linux.in
@@ -139,7 +139,7 @@ linux_entry ()
     printf '%s\n' "${prepare_boot_cache}" | sed "s/^/$submenu_indentation/"
   fi
 
-  PRIMARY_SWAP=$(/sbin/swapon --show="PRIO,NAME,TYPE" --noheading | sort -nr | head -n 1)
+  PRIMARY_SWAP=$(/sbin/swapon --show="PRIO,NAME,TYPE" --noheading | grep -v zram | sort -nr | head -n 1)
   SWAP_TYPE=$(echo $PRIMARY_SWAP | awk '{print $3}')
   SWAP_DEV=$(echo $PRIMARY_SWAP | awk '{print $2}')
   if [ "x$SWAP_TYPE" = "xpartition" ]; then
